--- a/electron/tests/open_win_script/template.html
+++ b/electron/tests/open_win_script/template.html
@@ -15,33 +15,14 @@
             const constants = require('./constants')
 
             ipcRenderer.once(constants.EVENT_SEND, (e, src, t=2000) => {
-                let tid;
-                const script = document.createElement('script')
-                script.src = src;
-
-                tid = setTimeout(() => {
-                    if (!tid) return;
-                    tid = null
-                    script.onerror = null
-                    script.onload = null
-                    ipcRenderer.send(constants.EVENT_FAIL, constants.ERROR_MESSAGE)
-                }, t)
-
-                script.onload = () => {
-                    if (!tid) return;
-                    clearTimeout(tid)
-                    tid = null
-                    ipcRenderer.send(constants.EVENT_SUCCESS)
-                }
-
-                script.onerror = () => {
-                    if (!tid) return;
-                    clearTimeout(tid)
-                    tid = null
-                    ipcRenderer.send(constants.EVENT_FAIL, constants.ERROR_MESSAGE)
-                }
-
-                document.body.append(script)
+                setTimeout(() => {
+                    try {
+                        require(src);
+                        ipcRenderer.send(constants.EVENT_SUCCESS)
+                    } catch(e) {
+                        ipcRenderer.send(constants.EVENT_FAIL, constants.ERROR_MESSAGE, e.message)
+                    }
+                }, 20)
             })
         })()    
     </script>
